[package]
name = "sdk_bitnames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
blake2 = "0.10.6"
digest = "0.10.6"
ed25519-dalek = "1.0.1"
fake = "2.5.0"
hex = "0.4.3"
rand = "0.7"
sdk_types = { path = "../sdk_types" }
serde = "1.0.157"
